Changed applicationId key from N to S

--- a/serverless.yml
+++ b/serverless.yml
@@ -37,7 +37,7 @@ resources:
         AttributeDefinitions:
           -
             AttributeName: applicationId
-            AttributeType: N
+            AttributeType: S
         KeySchema:
           -
             AttributeName: applicationId
